tests/baselines/reference/objectTypeWithOptionalProperty1.errors.txt
objectTypeWithOptionalProperty1.ts(2,10): error TS1162: An object member cannot be declared optional.


==== objectTypeWithOptionalProperty1.ts (1 errors) ====
        var b = {
            x?: 1 // error
             ~
!!! error TS1162: An object member cannot be declared optional.
        }